tests/error/selfie.lua
function LoudDog:makeSound()
  s = selfie.sound .. ' '
  print(s .. s ... s)
end